wizard modifications merged with alpha2
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3206 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/plugin/aimaccregwizz/resources.properties
+++ b/src/net/java/sip/communicator/plugin/aimaccregwizz/resources.properties
@@ -14,6 +14,7 @@ proxyPort=Proxy port
 proxyType=Proxy type
 proxyUsername=Proxy username
 proxyPassword=Proxy password
+error=Error
 
 protocolIcon=resources/images/aim/aim16x16-online.png
 pageImage=resources/images/aim/aim64x64.png
