--- a/src/net/java/sip/communicator/plugin/gibberishaccregwizz/resources.properties
+++ b/src/net/java/sip/communicator/plugin/gibberishaccregwizz/resources.properties
@@ -5,6 +5,7 @@ password=Password:
 rememberPassword=Remember password
 userAndPassword=Identification
 existingAccount=* The account you entered is already installed.
+error=Error
 
 protocolIcon=resources/images/gibberish/gibberish-online.png
 pageImage=resources/images/gibberish/gibberish64x64.png
