--- a/src/net/java/sip/communicator/plugin/ircaccregwizz/resources.properties
+++ b/src/net/java/sip/communicator/plugin/ircaccregwizz/resources.properties
@@ -2,7 +2,7 @@ protocolName=IRC
 protocolDescription=IRC protocol.
 nick=Nickname:
 password=Password:
-infoPassword=Most IRC server didn't required password.
+infoPassword=Most IRC servers do not require password.
 rememberPassword=Remember password
 autoNickChange=Automatically change nick when it's already used
 defaultPort=Use default port
@@ -13,5 +13,7 @@ userAndPassword=Identification
 serverIRC=Server
 options=Options
 existingAccount=* The account you entered is already installed.
+error=Error
+
 protocolIcon=resources/images/irc/cr16-action-irc_online.png
 pageImage=resources/images/irc/cr64-app-irc_protocol.png
