--- a/src/net/java/sip/communicator/plugin/msnaccregwizz/resources.properties
+++ b/src/net/java/sip/communicator/plugin/msnaccregwizz/resources.properties
@@ -5,6 +5,7 @@ password=Password:
 rememberPassword=Remember password
 uinAndPassword=ID and Password
 existingAccount=* The account you entered is already installed.
+error=Error
 
 protocolIcon=resources/images/msn/msn16x16.png
 pageImage=resources/images/msn/msn64x64.png
