--- a/src/net/java/sip/communicator/plugin/zeroconfaccregwizz/resources.properties
+++ b/src/net/java/sip/communicator/plugin/zeroconfaccregwizz/resources.properties
@@ -6,5 +6,7 @@ password=Password:
 rememberPassword=Remember password
 userAndPassword=Identification
 existingAccount=* A Bonjour account already exists. You can only install a single Bonjour account.
+error=Error
+
 protocolIcon=resources/images/zeroconf/zeroconf-color-16.png
 pageImage=resources/images/zeroconf/zeroconf-color-64.png
