--- a/src/net/java/sip/communicator/plugin/icqaccregwizz/resources.properties
+++ b/src/net/java/sip/communicator/plugin/icqaccregwizz/resources.properties
@@ -14,6 +14,7 @@ proxyPort=Proxy port
 proxyType=Proxy type
 proxyUsername=Proxy username
 proxyPassword=Proxy password
+error=Error
 
 protocolIcon=resources/images/icq/icq16x16-online.png
 pageImage=resources/images/icq/icq64x64.png
