--- a/src/net/java/sip/communicator/plugin/rssaccregwizz/resources.properties
+++ b/src/net/java/sip/communicator/plugin/rssaccregwizz/resources.properties
@@ -1,10 +1,12 @@
 protocolName=RSS
 protocolDescription=Add your preferred RSS feeds into SIP Communicator !
-userID=User ID:
-password=Password:
-rememberPassword=Remember password
-userAndPassword=Identification
-existingAccount=* The account you entered is already installed.
+error=Error
+rssAccountExist=RSS account already exists!
+rssAccountInfo=This wizard will create an RSS account for you.\n\n\
+Note that you could have only one RSS account!\n\n\
+You can add RSS feeds to your contact list using the "Add contact" wizard. Fill in the contact address field with the URI of the RSS feed you would like to add.
+rssAccountInfoTitle=RSS Account Information
+rssAccountAttention=Please read attentively the information provided below!
 
 protocolIcon=resources/images/rss/rss-online.png
 pageImage=resources/images/rss/rss64x64.png
