--- a/src/net/java/sip/communicator/plugin/sshaccregwizz/resources.properties
+++ b/src/net/java/sip/communicator/plugin/sshaccregwizz/resources.properties
@@ -5,6 +5,7 @@ identityFile=Identitity File:
 knownHosts=Known Hosts:
 accountDetails=SSH Account Details
 existingAccount=* The account you entered is already installed.
+error=Error
 
 protocolIcon=resources/images/ssh/ssh-online.png
 pageImage=resources/images/ssh/ssh64x64.png
