fix rss load. missing felix package imports
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3224 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -12,6 +12,7 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  org.w3c.dom; \
  org.xml.sax; \
  org.xml.sax.helpers; \
+ org.xml.sax.ext; \
  sun.misc; \
  sun.security.action; \
  javax.xml.parsers;\
