--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -19,6 +19,7 @@ org.osgi.framework.system.packages= org.osgi.framework; ; version=1.3.0, \
  javax.swing.filechooser; \
  org.w3c.dom; \
  org.xml.sax; \
+ org.xml.sax.ext; \
  javax.xml.parsers;\
  org.apache.xml.serialize; \
  javax.xml.transform; \
