systray tooltip text is moved to resources
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3228 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/systray/resources.properties
+++ b/src/net/java/sip/communicator/impl/systray/resources.properties
@@ -26,3 +26,4 @@ onlineStatus=Online
 offlineStatus=Offline
 messageReceived=Message received from
 failedToLoadAddContactDialog=Failed to load the "Add contact" wizard dialog.
+systrayToolTip=SIP Communicator
