--- a/src/net/java/sip/communicator/impl/systray/resources.properties
+++ b/src/net/java/sip/communicator/impl/systray/resources.properties
@@ -25,4 +25,4 @@ onlineStatus=Online
 offlineStatus=Offline
 messageReceived=Message received from
 failedToLoadAddContactDialog=Failed to load the "Add contact" wizard dialog.
-systrayToolTip=IPPI Messenger
+systrayToolTip=SIP Communicator
