--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -92,6 +92,7 @@ felix.auto.start.60= \
 
  felix.auto.start.67= \
  reference:file:sc-bundles/pluginmanager.jar \
+ reference:file:sc-bundles/whiteboard.jar \
  reference:file:sc-bundles/icqaccregwizz.jar \
  reference:file:sc-bundles/aimaccregwizz.jar \
  reference:file:sc-bundles/sipaccregwizz.jar \
