refactored the about window and moved it to splashscreen-bundle. the next step is to refactor the splashcreen bundle to a new name.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3269 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/plugin/splashscreen/resources.properties
+++ b/src/net/java/sip/communicator/plugin/splashscreen/resources.properties
@@ -1,3 +1,6 @@
+about=About
 logoMessage=Open Source VoIP & Instant Messaging
 loading=Loading
+menuEntry=About
+ok=OK
 welcomeMessage=The SIP Communicator is currently under active development. The version you are running is only experimental and MAY NOT work as expected. Please refer to {0} for more information.
