--- a/src/net/java/sip/communicator/plugin/splashscreen/resources.properties
+++ b/src/net/java/sip/communicator/plugin/splashscreen/resources.properties
@@ -4,3 +4,5 @@ loading=Loading
 menuEntry=About
 ok=OK
 welcomeMessage=The SIP Communicator is currently under active development. The version you are running is only experimental and MAY NOT work as expected. Please refer to {0} for more information.
+copyright=<html><font size=3>(c)2003-2007 Copyright <b>sip-communicator.org</b>. All rights reserved. Visit <a href="http://sip-communicator.org">http://sip-communicator.org</a>.</font></html>
+license=<html><font size=3 style=bold>The SIP Communicator is currently under active development. The version you are running is only experimental and MAY NOT work as expected. Please refer to {0} for more information.</font></html>");
