some bugs fixed in the whiteboard plugin
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3286 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/plugin/whiteboard/resources.properties
+++ b/src/net/java/sip/communicator/plugin/whiteboard/resources.properties
@@ -34,6 +34,11 @@ invitationReceived=Invitation received
 invitationReceivedFormInfo={0} has invited you to join {1} whiteboard. You could accept, reject or ignore this invitation.
 invitation=Invitation text
 whiteboardTitle=Whiteboard [Beta]
+cancel=Cancel
+yes=Yes
+no=No
+doNotAskAgain=Do not ask me again.
+closeSessionQuestion=Would you like to end current session ? If you choose "yes" the current session will be ended, otherwise only your whiteboard window will be closed.
 file=File
 draw=Draw
 new=New
