--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -58,7 +58,7 @@ felix.auto.start.40= \
  reference:file:sc-bundles/configuration.jar \
  reference:file:sc-bundles/version.jar \
  reference:file:sc-bundles/version-impl.jar \
- reference:file:sc-bundles/splashscreen.jar \
+ reference:file:sc-bundles/branding.jar \
 
 felix.auto.start.50= \
  reference:file:sc-bundles/browserlauncher.jar \
