some more diversification of the branding resources
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3291 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/plugin/branding/resources.properties
+++ b/src/net/java/sip/communicator/plugin/branding/resources.properties
@@ -3,6 +3,13 @@ logoMessage=Open Source VoIP & Instant Messaging
 loading=Loading
 menuEntry=About
 ok=OK
-welcomeMessage=The SIP Communicator is currently under active development. The version you are running is only experimental and MAY NOT work as expected. Please refer to {0} for more information.
-copyright=<html><font size=3>(c)2003-2007 Copyright <b>sip-communicator.org</b>. All rights reserved. Visit <a href="http://sip-communicator.org">http://sip-communicator.org</a>.</font></html>
-license=<html><font size=3 style=bold>The SIP Communicator is currently under active development. The version you are running is only experimental and MAY NOT work as expected. Please refer to {0} for more information.</font></html>");
+welcomeMessage=The {0} is currently under active development. \
+               The version you are running is only experimental and MAY NOT \
+               work as expected. Please refer to {1} for more information.
+copyright=<DIV id=\"message\"><font size=3>(c)2003-2007 Copyright \
+          <b>sip-communicator.org</b>. All rights reserved. Visit \
+          <a href="http://sip-communicator.org">http://sip-communicator.org</a>.\
+          </font></DIV>
+license=<DIV id=\"message\">The <b>SIP Communicator</b> is distributed under \
+        the terms of the LGPL (<a href=\"http://www.gnu.org\">\
+        http://www.gnu.org</a>).</DIV>
