some more enhancements in the branding plugin - the about window and the splashscreen now use the same fonts; all unused constants are now removed; font name and size is moved to the branding properties; splash screen now uses the same styled html editor pane as the about dialog
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3293 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/plugin/branding/resources.properties
+++ b/src/net/java/sip/communicator/plugin/branding/resources.properties
@@ -1,11 +1,12 @@
-about=About
+aboutWindowTitle=About {0}
 logoMessage=Open Source VoIP & Instant Messaging
 loading=Loading
-menuEntry=About
+aboutMenuEntry=About
 ok=OK
-welcomeMessage=The {0} is currently under active development. \
+basedOn=based on
+welcomeMessage=<DIV id=\"message\">The {0} is currently under active development. \
                The version you are running is only experimental and MAY NOT \
-               work as expected. Please refer to {1} for more information.
+               work as expected. Please refer to {1} for more information.</DIV>
 copyright=<DIV id=\"message\"><font size=3>(c)2003-2007 Copyright \
           <b>sip-communicator.org</b>. All rights reserved. Visit \
           <a href="http://sip-communicator.org">http://sip-communicator.org</a>.\
