--- a/src/net/java/sip/communicator/plugin/whiteboard/resources.properties
+++ b/src/net/java/sip/communicator/plugin/whiteboard/resources.properties
@@ -34,6 +34,8 @@ invitationReceived=Invitation received
 invitationReceivedFormInfo={0} has invited you to join {1} whiteboard. You could accept, reject or ignore this invitation.
 invitation=Invitation text
 whiteboardTitle=Whiteboard [Beta]
+whiteboardMenuItemText=Whiteboard
+whiteboardMenuItemNotSupportedTooltip=This contact does not support whiteboarding
 cancel=Cancel
 yes=Yes
 no=No
