image paths fixed
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3306 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/plugin/branding/brandingResources.properties
+++ b/src/net/java/sip/communicator/plugin/branding/brandingResources.properties
@@ -2,3 +2,6 @@ productName=SIP Communicator
 productWebSite=http://sip-communicator.org
 fontName=Verdana
 fontSize=12
+aboutWindowBg=resources/images/plugin/branding/aboutWindowBackground.png
+splashScreenBg=resources/images/plugin/branding/splashScreenBackground.png
+textStyle=resources/styles/defaultStyle.css
