--- a/resources/install/debian/rules
+++ b/resources/install/debian/rules
@@ -49,28 +49,28 @@ install: build
 	cp debian/sip-communicator.desktop debian/sip-communicator/usr/share/applications/
 
 	# Copy all libs 
-	cp $(BASEDIR)/lib/*.jar debian/sip-communicator/usr/share/sip-communicator/lib/
-	cp $(BASEDIR)/resources/install/logging.properties debian/sip-communicator/usr/share/sip-communicator/lib/
-	cp $(BASEDIR)/lib/felix.client.run.properties debian/sip-communicator/usr/share/sip-communicator/lib/
-	cp -r $(BASEDIR)/lib/bundle debian/sip-communicator/usr/share/sip-communicator/lib/
+	cp $(BASEDIR)/lib/*.jar debian/sip-communicator/usr/lib/sip-communicator/lib/
+	cp $(BASEDIR)/resources/install/logging.properties debian/sip-communicator/usr/lib/sip-communicator/lib/
+	cp $(BASEDIR)/lib/felix.client.run.properties debian/sip-communicator/usr/lib/sip-communicator/lib/
+	cp -r $(BASEDIR)/lib/bundle debian/sip-communicator/usr/lib/sip-communicator/lib/
 
 	# Copy OS specific and native libs
-	cp $(BASEDIR)/lib/os-specific/linux/*.jar debian/sip-communicator/usr/share/sip-communicator/lib/
-	cp -r $(BASEDIR)/lib/native/linux debian/sip-communicator/usr/share/sip-communicator/lib/native
+	cp $(BASEDIR)/lib/os-specific/linux/*.jar debian/sip-communicator/usr/lib/sip-communicator/lib/
+	cp -r $(BASEDIR)/lib/native/linux debian/sip-communicator/usr/lib/sip-communicator/lib/native
 
 	# Copy SIP Communicator bundles
-	cp $(BASEDIR)/sc-bundles/*.jar debian/sip-communicator/usr/share/sip-communicator/sc-bundles
-	cp $(BASEDIR)/sc-bundles/os-specific/linux/*.jar debian/sip-communicator/usr/share/sip-communicator/sc-bundles
+	cp $(BASEDIR)/sc-bundles/*.jar debian/sip-communicator/usr/lib/sip-communicator/sc-bundles
+	cp $(BASEDIR)/sc-bundles/os-specific/linux/*.jar debian/sip-communicator/usr/lib/sip-communicator/sc-bundles
 	install -m 755 debian/sip-communicator.sh debian/sip-communicator/usr/bin/sip-communicator
 
-	# Remove all slicks, CVS info and unnecessary librairies.
-	rm debian/sip-communicator/usr/share/sip-communicator/sc-bundles/*-slick.jar
-	rm -rf debian/sip-communicator/usr/share/sip-communicator/lib/native/CVS
-	rm -rf debian/sip-communicator/usr/share/sip-communicator/lib/bundle/CVS
-	rm debian/sip-communicator/usr/share/sip-communicator/lib/bundle/junit.jar
+	# Remove all slicks, SVN info and unnecessary librairies.
+	rm debian/sip-communicator/usr/lib/sip-communicator/sc-bundles/*-slick.jar
+	rm -rf debian/sip-communicator/usr/lib/sip-communicator/lib/native/.svn
+	rm -rf debian/sip-communicator/usr/lib/sip-communicator/lib/bundle/.svn
+	rm debian/sip-communicator/usr/lib/sip-communicator/lib/bundle/junit.jar
 
 	# Make felix deploy its bundles in ~/.felix/sip-communicator.bin
-	sed -i -e "s/felix.cache.profiledir=sip-communicator.bin/felix.cache.profile=sip-communicator.bin/" debian/sip-communicator/usr/share/sip-communicator/lib/felix.client.run.properties
+	sed -i -e "s/felix.cache.profiledir=sip-communicator.bin/felix.cache.profile=sip-communicator.bin/" debian/sip-communicator/usr/lib/sip-communicator/lib/felix.client.run.properties
 
 
 # Build i386 files here.
