--- a/resources/install/debian/sip-communicator.desktop
+++ b/resources/install/debian/sip-communicator.desktop
@@ -5,6 +5,6 @@ GenericName=SIP Communicator
 Comment=VoIP and Instant Messaging client
 Icon=/usr/share/pixmaps/sip-communicator.svg
 Type=Application
-Categories=Application;Network;
+Categories=AudioVideo;Network;InstantMessaging;Chat;IRCClient;Telephony;VideoConference;Java;
 Exec=sip-communicator
 Terminal=false
