Add to systray bundle an icon for the "Set status message" dialog.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3314 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -1576,6 +1576,8 @@ javax.swing.event, javax.swing.border"/>
                 prefix="net/java/sip/communicator/service/systray"/>
             <zipfileset dir="${dest}/net/java/sip/communicator/impl/systray"
                 prefix="net/java/sip/communicator/impl/systray"/>
+            <zipfileset dir="${resources}/images/impl/gui/common"
+                prefix="resources/images/impl/gui/common"/>
         </jar>
     </target>
 
