--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -104,6 +104,7 @@ felix.auto.start.60= \
  reference:file:sc-bundles/rssaccregwizz.jar \
  reference:file:sc-bundles/zeroconfaccregwizz.jar \
  reference:file:sc-bundles/ircaccregwizz.jar \
+ reference:file:sc-bundles/contacteventhandler.jar \
  reference:file:sc-bundles/shutdown.jar
 
 # Uncomment the following lines if you want to run the architect viewer
