1. Fix : Storage thread in some conditions is not started and contactlist is not saved 2. Fix metacontactlis tests - reloading of contactlist too quickly prevents saving the last operation with the list 3. Some spell checks
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3329 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -676,7 +676,7 @@
             <!-- The following two configure felix telling it that it's running
                  as a test environment-->
             <sysproperty key="felix.config.properties"
-                value="file:./lib/felix.unit.test.properties"/>
+                value="file:${lib}/felix.unit.test.properties"/>
 
             <!-- Tell the slick runner where to store test results. -->
             <sysproperty key="net.java.sip.communicator.slick.runner.OUTPUT_DIR"
@@ -688,7 +688,7 @@
 
             <!-- Tell java.util.logging about our logging preferences -->
             <sysproperty key="java.util.logging.config.file"
-                value="lib/logging.properties"/>
+                value="${lib}/logging.properties"/>
 
             <!-- Tell all protocol testers their account details. -->
             <syspropertyset id="accounts">
